--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aws-amplify": "^4.3.13",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dompurify": "^2.3.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
