--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dompurify": "^2.3.6",
+    "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
